answer.html page added

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             Get ready to Quiz and be amazed!
           </p>
         </div>
-        <button
-          class="bg-green-600 font-light text-sm px-5 py-1 rounded text-white"
+        <button onclick="handlePage()" id="blogBtn"
+          class="bg-green-600 font-light text-sm px-5 py-1 rounded text-white "
         >
           Blog
         </button>
